--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
+./firebase.js
+firebase.js
+/firebase.js
+.firebase.js
+
 # dependencies
 /node_modules
 /.pnp
